# bioloid_motion

./: CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  package.xml
config/: walk.yaml
include/bioloid_motion/: bioloid_motion_robot.h  bioloid_motion_utils.h  bioloid_motion_walk.h
launch/: gazebo.launch
src/: bioloid_motion_robot.cpp  bioloid_motion_utils.cpp  bioloid_motion_walk.cpp  bioloid_motion_walk_test.cpp
